# segatools-ipc

./: meson.build
board/: io4.c  io4.h  sg-reader.c  sg-reader.h
hooklib/: setupapi.c
mai2hook/: config.c  config.h  dllmain.c  io4.c  io4.h  led.c  led.h  mai2-dll.c  mai2-dll.h  mai2hook.def  meson.build
mai2io/: mai2io.c  mai2io.h
sinmaihook/: amdaemon-hook.c  amdaemon-hook.h  dllmain.c  dynamic-inject.c  dynamic-inject.h  iohook-dynamic.c  iohook-dynamic.h  led-cmd.c  led-cmd.h  led.c  led.h  meson.build  reg.c  reg.h  serial-dynamic.c  serial-dynamic.h  touch-panel-cmd.c  touch-panel.c  touch-panel.h  unity.c
